src/app/about/about.component.scss
.material-icons {
    font-size:38px;
}

#divider {
    //border-left:1px solid rgba(0,0,0,.2);
    //height: 75vh;
    overflow:auto;
    //padding:5%;
    //padding-top:0 !important;
    //height:50vh;
    //padding-left:2.5%;
    padding-right:4%;
    p {
        margin-left:3.5%;
    }
}

h1 {
    margin-top:2% !important;
    padding-left:2.5%;
    margin-bottom:2.5% !important;
    font-weight:300;
    font-weight: 200;
    text-shadow: -1px 1px #ccc6a6;;
}

h5 {
    font-weight:600;
    font-variant:small-caps;
}

.no-padding{
    padding-right:0 !important;
    padding-left:0 !important;
}

.page-title{
    margin-top:unset !important;
    margin-bottom:unset !important;
    padding-left:unset !important;
    text-align:center;
    text-shadow: -1px 1px #ccc6a6;
}

// .mx-auto {
//     text-align:center;
//     .scroll-down {
//         //position:inherit;
//         margin-top:2.5%;
//         display:inline-block;
//         opacity: 0;
//     }
// }

.container {
    background-image: url(https://i.imgur.com/EEg9e7c.png);
    background-size: cover;
    overflow:auto; // hidden
    scroll-behavior: smooth;
    .graphics {
        .headshot {
            box-shadow: 0 3px 5px rgb(224, 221, 202);
        }
        margin-bottom:1em !important;
    }
    height:68vh;
}

.div-link {
    text-decoration:underline;
    cursor:pointer;
}

// .container {
//     animation-name: fadeInBg;
//     animation-iteration-count: 1;

//     animation-timing-function: ease-in;
//     animation-duration: 2.25s;
//     @keyframes fadeInBg {
//         0% {
//             background-image: url(https://i.imgur.com/BxnBbqC.png);
//         }
//         100% {
//             background-image: url(https://i.imgur.com/EEg9e7c.png);
            
//         }
//     }
// }


.returnTop:hover{
    opacity:0.5;
}

